# FirePiCam

./: .gitignore  CMakeLists.txt  FirePiCam.c  FirePiCam.h  FirePiStill.c  LICENCE  build  version.h.in
